Fix for slick dots contianer overlap

--- a/source/css/_objects.carousels.scss
+++ b/source/css/_objects.carousels.scss
@@ -154,7 +154,7 @@
   right: 0;
   top: 0;
   left: auto;
-  width: 100%;
+  width: auto;
   text-align: right;
   padding: $pad-mobile;
 
